# df-wrangler

./: .gitignore  README.md  df-wrangler.code-workspace  docker-compose.yaml  otel-collector-config.yaml  requirements.txt
client/: main.py  pyproject.toml  requirements.txt  setup.sh
client/core/: telemetry.py
dev/: agent.py  main.py  ollama_agent.py  test_model.py
server/: launch_server.sh  populate_examples.py  pyproject.toml  requirements.txt  setup.sh  uv_tree.txt
server/app/: main.py  test_openai.py
server/app/api/: endpoints.py
server/app/conf/: config.yaml  logging.yaml
server/app/core/: config.py  telemetry.py
server/app/schemas/: dataframe.py
server/app/services/: code_execution_service.py  dataframe_service.py  llm_service.py  logging_service.py  milvus_service.py  qdrant_service.py  safe_exec.py  session_service.py  storage_service.py  vector_store_factory.py
server/tests/: test_dataframe_service.py  test_dataframe_service_hypothesis.py  test_logging_control.py
