[project]
name = "df-wrangler-client"
version = "0.1.0"

dependencies = [
    "rich",
    "requests",
    "prompt_toolkit",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-logging"
]